banner changes and properties card button alignment changes

--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
       <div class="row banner-slick">
         <div class="col-md-12">
             <div class="w-100 flex justify-center">
-              <img src="./assets/img/banner.png" alt="" class="" style="min-height: 70vh;">
+              <img src="./assets/img/banner.png" alt="" class="object-cover" style="max-height: 90vh;">
             </div>
         </div>
         <div class="col-md-12">
           <div class="w-100 flex justify-center">
-            <img src="./assets/img/banner.png" alt="" class=" object-cover" style="min-height: 70vh;">
+            <img src="./assets/img/properties/1.jpg" alt="" class="w-100 object-cover" style="max-height: 90vh;">
           </div>
       </div>
       </div>
@@ -237,7 +237,7 @@
                 </div>
                 <h6 class="font-semibold mb-2">Starting bid:$124000</h6>
                 <div class="flex justify-between items-center">
-                  <a href="" class="bg-black text-white text-base font-semibold h-10 place-content-center place-items-center block px-4 rounded-full">Bid to Register</a>
+                  <a href="" class="bg-black text-white text-base font-semibold h-10 flex justify-center items-center px-4 rounded-full">Bid to Register</a>
                   <div>
                     <a href="" class="bg-black w-10 h-10 rounded-full text-white flex items-center justify-center hover:bg-red-600"><i class="fa-solid fa-heart"></i></a>
                   </div>
@@ -274,7 +274,7 @@
                 </div>
                 <h6 class="font-semibold mb-2">Starting bid:$124000</h6>
                 <div class="flex justify-between items-center">
-                  <a href="" class="bg-black text-white text-base font-semibold h-10 place-content-center place-items-center block px-4 rounded-full">Bid to Register</a>
+                  <a href="" class="bg-black text-white text-base font-semibold h-10 flex justify-center items-center px-4 rounded-full">Bid to Register</a>
                   <div>
                     <a href="" class="bg-black w-10 h-10 rounded-full text-white flex items-center justify-center hover:bg-red-600"><i class="fa-solid fa-heart"></i></a>
                   </div>
@@ -311,7 +311,7 @@
                 </div>
                 <h6 class="font-semibold mb-2">Starting bid:$124000</h6>
                 <div class="flex justify-between items-center">
-                  <a href="" class="bg-black text-white text-base font-semibold h-10 place-content-center place-items-center block px-4 rounded-full">Bid to Register</a>
+                  <a href="" class="bg-black text-white text-base font-semibold h-10 flex justify-center items-center px-4 rounded-full">Bid to Register</a>
                   <div>
                     <a href="" class="bg-black w-10 h-10 rounded-full text-white flex items-center justify-center hover:bg-red-600"><i class="fa-solid fa-heart"></i></a>
                   </div>
@@ -348,7 +348,7 @@
                 </div>
                 <h6 class="font-semibold mb-2">Starting bid:$124000</h6>
                 <div class="flex justify-between items-center">
-                  <a href="" class="bg-black text-white text-base font-semibold h-10 place-content-center place-items-center block px-4 rounded-full">Bid to Register</a>
+                  <a href="" class="bg-black text-white text-base font-semibold h-10 flex justify-center items-center px-4 rounded-full">Bid to Register</a>
                   <div>
                     <a href="" class="bg-black w-10 h-10 rounded-full text-white flex items-center justify-center hover:bg-red-600"><i class="fa-solid fa-heart"></i></a>
                   </div>
@@ -523,6 +523,7 @@
     slidesToScroll: 1,
     arrows: true,
     fade: true,
+    dots:false,
   });
 });
 
