footer marquee scroll added

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <div class="row mb-5">
         <div class="col-md-12">
           <div class="text-center">
-            <p class="title-f mb-1">Our Available Properties</p>
+            <p class="title-f font-semibold mb-1">Our Available Properties</p>
             <p style="color: var(--primary-color);">Check Out Our Available Properties</p>
           </div>
         </div>
@@ -382,7 +382,7 @@
       <div class="row mb-5">
         <div class="col-md-12">
           <div class="text-center">
-            <p class="title-f mb-1 text-white font-semibold">Experience Stress-Free Buying and Selling</p>
+            <p class="title-f font-semibold mb-1 text-white font-semibold">Experience Stress-Free Buying and Selling</p>
             <p style="color: var(--primary-color);">Best Experience</p>
           </div>
         </div>
@@ -405,7 +405,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="text-center">
-            <p class="title-f mb-1  font-semibold">Why To Choose Us?</p>
+            <p class="title-f font-semibold mb-1  font-semibold">Why To Choose Us?</p>
             <p style="color: var(--primary-color);">GPS Link Estates was formed by a leading financial advisor and a property developer.</p>
           </div>
         </div>
@@ -428,6 +428,22 @@
   </section>
   <!--===== Why Choose us Section  =====-->
 
+  <!--===== Marquee Section  =====-->
+  
+  <section>
+    <div class="marquee py-3">
+      <div class="team-scroll py-2">
+        <span class="uppercase title-f font-semibold">Sold4u2day</span>
+        <img src="./assets/img/icon/star.svg" alt="Star">
+        <span class="uppercase title-f font-semibold">Sold4u2day</span>
+        <img src="./assets/img/icon/star.svg" alt="Star">
+        <span class="uppercase title-f font-semibold">Sold4u2day</span>
+        <img src="./assets/img/icon/star.svg" alt="Star">
+      </div>
+    </div>
+  </section>
+  
+  <!--===== Marquee Section  =====-->
   
   <!--===== Footer Section  =====-->
   <footer class="bg-secondary py-20 pb-2">
@@ -435,7 +451,7 @@
       <div class="row mb-5">
         <div class="col-md-12">
           <div class="text-center">
-            <p class="title-f mb-1  font-semibold text-white">Instant Online House Valuation</p>
+            <p class="title-f font-semibold mb-1  font-semibold text-white">Instant Online House Valuation</p>
             <p style="color: var(--primary-color);">Discover your home's value in two quick steps.</p>
           </div>
         </div>
