added: live event auction page

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             </div>
             <div class="text-white hidden lg:block">
               <ul class="flex gap-6 mb-0 p-0">
-                <li><a href="" class="block text-sm" style="line-height: 5.5rem;">Home</a></li>
-                <li><a href="" class="flex gap-2 items-center text-sm " style="line-height: 5.5rem;">Auction <img src="./assets/img/icon/arrow.svg" alt=""></a></li>
+                <li><a href="index.html" class="block text-sm" style="line-height: 5.5rem;">Home</a></li>
+                <li><a href="live-event-auction.html" class="flex gap-2 items-center text-sm " style="line-height: 5.5rem;">Auction <img src="./assets/img/icon/arrow.svg" alt=""></a></li>
                 <li><a href="" class="flex gap-2 items-center text-sm" style="line-height: 5.5rem;">Auction Guides <img src="./assets/img/icon/arrow.svg" alt=""></a></li>
                 <li><a href="" class="flex gap-2 items-center text-sm" style="line-height: 5.5rem;">Services <img src="./assets/img/icon/arrow.svg" alt=""></a> </li>
                 <li><a href="" class="block text-sm" style="line-height: 5.5rem;">About Us</a></li>
