live auction page : added

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                 <div class="container">
                   <div class="row">
                     <div class="col-md-12 text-center text-white">
-                      <h1 class="text-6xl font-bold">Grab the keys to the property of your Dreams!</h1>
-                      <p class="text-4xl font-bold">Residental and Commercial property Auctioneers</p>
+                      <h1 class="text-4xl lg:text-6xl font-bold">Grab the keys to the property of your Dreams!</h1>
+                      <p class="text-2xl lg:text-4xl font-bold">Residental and Commercial property Auctioneers</p>
                       <div class="mt-5">
-                        <a href="" class="text-lg bg-white font-medium px-4 py-3 rounded-xl"  style="color: var(--primary-color); box-shadow: var(--primary-color) 4px 4px 0px;">View Lots</a>
+                        <a href="" class="text-base lg:text-lg bg-white font-medium px-4 py-3 rounded-xl"  style="color: var(--primary-color); box-shadow: var(--primary-color) 4px 4px 0px;">View Lots</a>
 
                       </div>
                     </div>
@@ -147,8 +147,8 @@
               <div class="container">
                 <div class="row">
                   <div class="col-md-12 text-center text-white">
-                    <h1 class="text-6xl font-bold">Grab the keys to the property of your Dreams!</h1>
-                    <p class="text-4xl font-bold">Residental and Commercial property Auctioneers</p>
+                    <h1 class="text-4xl lg:text-6xl font-bold">Grab the keys to the property of your Dreams!</h1>
+                    <p class="text-2xl lg:text-4xl font-bold">Residental and Commercial property Auctioneers</p>
                   </div>
                 </div>
               </div>
@@ -265,7 +265,7 @@
               <h5 class="text-3xl text-center secondary-font">next london <br > Lots is in</h5>
             </div>
             <div class="flex-1 p-4 place-content-center place-items-center">
-              <h5 class="text-3xl secondary-font">No Upcoming auction</h5>
+              <h5 class="text-3xl secondary-font text-center lg:text-left">No Upcoming auction</h5>
             </div>
             <div class="p-4 place-content-center place-items-center border-t-2 lg:border-l-2 border-white text-center">
               <a href="" class="auction-view-btn text-sm font-medium secondary-font" style="color: var(--primary-color);">VIEW LOTS</a>
@@ -289,7 +289,7 @@
         </div>
       </div>
       <div class="row py-10 border-b border-black border-opacity-50">
-        <div class="col-md-6">
+        <div class="col-md-6 pb-4 lg:pb-0">
           <div>
             <h4 class="mb-4" style="color: var(--primary-color);">Upcoming event auction should come</h4>
             <div class="flex flex-col">
