auction date filter alignment changes

--- a/live-auction-lots.html
+++ b/live-auction-lots.html
@@ -191,7 +191,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-md-2 pt-4 lg:pt-0">
+            <div class="col-md-2 py-4 lg:py-0">
                 <div class="auction-filter flex gap-3 justify-end items-center my-auto">
                     <a href=""><img src="./assets/img/icon/Filter.svg" class="w-5" alt=""></a>
                     <a href=""><img src="./assets/img/icon/Filter-3.svg" class="w-5" alt=""></a>
