added : property-view-page

--- a/index.html
+++ b/index.html
@@ -294,12 +294,12 @@
             <h4 class="mb-4" style="color: var(--primary-color);">Upcoming event auction should come</h4>
             <div class="flex flex-col">
               <!-- lots 1 -->
-              <div class="flex justify-between items-center border-b border-black border-opacity-50 py-3">
+              <div class="auction-div flex justify-between items-center border-b border-black border-opacity-50 py-3">
                 <div class="flex gap-4">
-                  <div class="flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
-                    <p class="mb-0 text-xl font-bold">01</p>
-                    <p class="mb-0 text-base font-medium">Aug 24</p>
-                    <p class="mb-0 mt-2 text-xs font-bold">Friday</p>
+                  <div class="auction-date-col flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
+                    <p class="mb-0 text-xl font-bold text-black">01</p>
+                    <p class="mb-0 text-base font-medium text-black">Aug 24</p>
+                    <p class="mb-0 mt-2 text-xs font-bold text-black">Friday</p>
                   </div>
                   <div>
                     <p class="mb-0 text-xl font-bold ">Auction Title</p>
@@ -311,9 +311,9 @@
                 </div>
               </div>
               <!-- lots 2 -->
-              <div class="flex justify-between items-center border-b border-black border-opacity-50 py-3">
+              <div class="auction-div flex justify-between items-center border-b border-black border-opacity-50 py-3">
                 <div class="flex gap-4">
-                  <div class="flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
+                  <div class="auction-date-col flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
                     <p class="mb-0 text-xl font-bold">01</p>
                     <p class="mb-0 text-base font-medium">Aug 24</p>
                     <p class="mb-0 mt-2 text-xs font-bold">Friday</p>
@@ -328,9 +328,9 @@
                 </div>
               </div>
               <!-- lots-3 -->
-              <div class="flex justify-between items-center border-b border-black border-opacity-50 py-3">
+              <div class="auction-div flex justify-between items-center border-b border-black border-opacity-50 py-3">
                 <div class="flex gap-4">
-                  <div class="flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
+                  <div class="auction-date-col flex flex-col items-center p-2 rounded-md" style="background-color: var(--primary-color);">
                     <p class="mb-0 text-xl font-bold">01</p>
                     <p class="mb-0 text-base font-medium">Aug 24</p>
                     <p class="mb-0 mt-2 text-xs font-bold">Friday</p>
