--- a/property-view-page.html
+++ b/property-view-page.html
@@ -22,7 +22,7 @@
      <!-- Slick Slider -->
      <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick.css"/>
      <link rel="stylesheet" type="text/css" href="./assets/css/slick/slick-theme.css"/>
-   
+
      <!-- Fontawesome 6 -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -311,13 +311,27 @@
                     <div class="e-certify box-show">
                         <h6 class="text-sm font-semibold text-black">Energy Certificate</h6>
                         <div class="e-image mt-2 flex justify-center">
-                            <img src="./assets/img/property-detail-images/energy-certificate.png" alt="">
+                          <img src="./assets/img/property-detail-images/energy-certificate.png" 
+                          style="width:30%;cursor:zoom-in"
+                          onclick="showModal()">
+                   
+                     <div id="modal01" class="w3-modal" onclick="hideModal()">
+                       <span class="w3-button w3-hover-red w3-xlarge w3-display-topright" onclick="hideModal()">&times;</span>
+                       <div class="w3-modal-content w3-animate-zoom">
+                         <img src="./assets/img/property-detail-images/energy-certificate.png" style="width:100%">
+                       </div>
+                     </div>
                         </div>
                     </div>
                     <div class="floor-plan box-show">
                         <h6 class="text-sm font-semibold text-black">Floor Plan</h6>
-                        <div class="e-image mt-2 flex justify-center p-4">
+                        <div class="floor-plan-img text-center">
+                          <div class="e-image mt-2 flex justify-center p-4">
                             <img src="./assets/img/property-detail-images/plan.png" alt="">
+                          </div>
+                          <div class="e-image mt-2 flex justify-center p-4">
+                            <img src="./assets/img/property-detail-images/plan.png" alt="">
+                          </div>
                         </div>
                     </div>
                     <div class="map box-show">
@@ -342,10 +356,21 @@
                         <div>
                             <a href="" class="flex justify-end items-center gap-1 text-xs font-medium opacity-40"><img src="./assets/img/icon/Show.svg" alt=""> 80 Watchlist</a>
                         </div>
-                        <ul class="grid gap-2 justify-end">
-                            <li class="text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> <a href="" style="opacity: 0.5;"><img src="./assets/img/icon/arrow-down.svg" alt=""></a></li>
-                            <li class="text-sm font-medium grey-text text-end">Last Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span></li>
+                        <ul class="flex lg:grid xl:flex gap-2 justify-between p-0 relative" >
+                            <li class="text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                            <li class="relative text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Last Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> <a class="bid-dropdown-btn" style="opacity: 0.5;"><img src="./assets/img/icon/arrow-down.svg" alt=""></a>
+                            </li>
+                            <div class="bid-dropdown hidden absolute w-100 top-8 right-0 bg-white shadow-lg rounded-lg z-50">
+                              <ul class="pl-0 p-2">
+                                <li class="p-2 border-b border-opacity-25 text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                                <li class="p-2 border-b border-opacity-25 text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                                <li class="p-2 border-b border-opacity-25 text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                                <li class="p-2 border-b border-opacity-25 text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                                <li class="p-2 border-b border-opacity-25 text-sm font-medium grey-text text-end flex items-center gap-2 min-w-max">Current Bid  <span class="text-2xl text-black font-bold ml-2">$78390</span> </li>
+                              </ul>
+                            </div>
                         </ul>
+                        
                         <div class="property-input items-center rounded-full py-2 px-3 mb-2">
                             <input type="text" class="w-100 text-sm font-medium bg-transparent focus:outline-none" placeholder="Enter amount" >
                             <a href="" class="min-w-max px-3 py-2 text-xs font-medium bg-black flex justify-center items-center rounded-full text-white">Bid Now</a>
@@ -590,6 +615,13 @@
 
   })
   
+  $('.floor-plan-img').slick({
+    slidesToShow: 1,
+    slidesToScroll: 1,
+    arrows: false,
+    fade: false,
+    dots:true,
+  });
 
 </script>
 </body>
