sign in correction

--- a/login-page.html
+++ b/login-page.html
@@ -202,7 +202,7 @@
                     </ul>
                   </div>
                   <!-- Login Form -->
-                  <div class="r-form-a hidden">
+                  <div class="r-form-a ">
                     <p class="text-lg font-bold"> Login Info</p>
                     <form class="r-form-field" action="" method="post">
                       <div class="row">
@@ -245,7 +245,7 @@
                   </div>
 
                   <!-- Update Verification Code-->
-                   <div class="v-form hidden">
+                   <div class="v-form ">
 
                      <div class="row">
                       <p class="text-lg font-bold">Update Verification Code sent to your mobile & Email</p>
